# AlphaEngine

./: .gitignore  AlphaEngine.ipynb  LUV_trades.csv  Playing.ipynb  README.md  setup.py  trades.csv
alphaengine/: loaders.py  main.py  perfect_profit.py  stats.py  strategy.py  transforms.py
chris_scratch/: Chris_Playing.ipynb  Feature_Selection.ipynb
compute/: Cargo.toml
compute/compute_kernel/: Cargo.toml
compute/compute_kernel/shaders/: alpha_engine.glsl  risk.glsl
compute/compute_kernel/src/: lib.rs  main.rs  shaders.rs
compute/loader/: Cargo.toml  test.csv
compute/loader/src/: lib.rs  main.rs
compute/python_binding/: Cargo.toml  README.md  test.py
compute/python_binding/src/: lib.rs  loader.rs  loader_binds.rs  main.rs
compute/scratch/: Cargo.toml
compute/scratch/src/: main.rs
data/: AAPL.csv  EURUSD.csv
stu_scratch/: Automated-Example.ipynb  Factors-N-Strats.ipynb  Feature-Predictors.ipynb  Formalize-M1.ipynb  Formalize.ipynb  Metrics.ipynb  NeuralNet.ipynb  Playing.ipynb  TSFresh-test.ipynb  Use-It.ipynb
