[package]
name = "python_binding"
version = "0.1.0"
authors = ["Avery Wagar <ajmw.subs@gmail.com>"]
edition = "2018"

[lib]
name = "ack"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

[dependencies.compute_kernel]
path = "../compute_kernel"
