[package]
name = "ack"
version = "0.1.0"
authors = ["Avery Wagar <ajmw.subs@gmail.com>"]
edition = "2018"

[lib]
name = "ack"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
crate-type = ["cdylib"]

[dependencies]
tokio = "1.2.0"
async-std = "1.9.0"

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

[dependencies.pyo3-asyncio]
version = "0.13.0"
features = ["tokio-runtime", "async-std-runtime"]

[dependencies.compute_kernel]
path = "../compute_kernel"

[dependencies.loader]
path = "../loader"

