[package]
name = "scratch"
version = "0.1.0"
authors = ["Avery Wagar <ajmw.subs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2.0", features = ["full"] }

walkdir = "2.3.1"

ndarray = "0.14.0"
ndarray-stats = "0.4.0"

serde = { version = "1.0.123", features = ["derive"] }
csv = "1.1"

chrono = { version = "0.4.19", features = ["serde"] }
futures-util = "0.3.12"
async-stream = "0.3.0"
